<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Homework2</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="listedprice">Listed Price</string>
    <string name="hint">Enter Listed Price</string>
    <string name="tenpercent">10%</string>
    <string name="twentyfivepercent">25%</string>
    <string name="fiftypercent">50%</string>
    <string name="custom">Custom</string>
    <string name="discount">Discount</string>
    <string name="percent">Percent</string>
    <string name="saved">You Saved:</string>
    <string name="pay">You Pay:</string>
    <string name="exit">Exit</string>

</resources>
